--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -204,7 +204,7 @@
                 <i class="bi bi-arrow-left-right"></i>
                 Transactions
             </a>
-            <a href="#" class="nav-link">
+            <a href="ManageApartments" class="nav-link">
                 <i class="bi bi-wallet2"></i>
                 Cashflow
             </a>
